gobmkida/c3/gameinfo_print
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gameinfo_print/src/engine/interface.c:874:9: error: use of undeclared identifier 's'
v3 = ( &s)[computer_player]; 
        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gameinfo_print/src/obj/1/interface.o] Error 1
